# popquiz

./: .gitignore  AGENTS.md  Makefile  README.md  SPEC.md  backfill_directors.py  backfill_genres.py  fetch_popular_artists.py  fetch_top250.py  manage.py  pyproject.toml  remove_bg.py  requirements.txt
.claude/: settings.local.json
accounts/: adapter.py  admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_avatar_url.py  0003_magiclink.py
catalog/: admin.py  forms.py  imdb_utils.py  models.py  musicbrainz_utils.py  tmdb_utils.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_item_imdb_id_item_imdb_url_item_poster_url.py  0003_add_director_field.py  0003_item_musicbrainz_id_song_songupvote.py  0004_add_genre_field.py  0005_attribute_feb3_movies_to_qtrinh2.py  0006_attribute_64_movies_to_qtrinh2.py  0007_add_item_label_to_category.py  0008_create_catalog_managers_group.py  0009_item_years_running.py  0010_item_image_urls.py  0011_item_musicbrainz_id_song_songupvote.py  0012_catalog_managers_song_permissions.py  0013_song_release_fk.py  0014_song_release_cascade.py  0015_item_spotify_genre_tags.py
catalog/templatetags/: catalog_tags.py  custom_filters.py
imports/: movies_100.csv
popquiz/: asgi.py  email_backend.py  settings.py  urls.py  wsgi.py
ratings/: admin.py  models.py  urls.py  views.py
ratings/migrations/: 0001_initial.py  0002_rename_vote_to_rating.py  0003_alter_rating_table.py  0004_add_review_to_rating.py
templates/: base.html
votes/: admin.py  models.py  urls.py  views.py
(+37 files in other folders)
