[project]
name = "popquiz"
version = "0.1.0"
description = "A Django movie quiz application"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
